--- a/support/templates/login.html
+++ b/support/templates/login.html
@@ -15,7 +15,7 @@ Se connecter
             <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
               <div class="d-flex justify-content-center py-4">
-                <a href="#" class="logo d-flex align-items-center w-auto">
+                <a href="#" class="logo d-flex flex-column-reverse gap-5 align-items-center w-auto">
                   <img src="{% static 'assets/img/apple-touch-icon.png' %}" alt="">
                   <span class="d-none d-lg-block">CNTD_SUPPORT</span>
                 </a>
