--- a/support/templates/agent/demandes_affectees.html
+++ b/support/templates/agent/demandes_affectees.html
@@ -26,21 +26,21 @@ Demandes affectées
             <div class="col-12">
               <div class="card recent-sales overflow-auto">
 
-                <div class="filter">
+                <!-- <div class="filter">
                   <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
                   <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                     <li class="dropdown-header text-start">
                       <h6>Filter</h6>
-                    </li>
+                    </li> -->
                     <!-- Les demandes par catégorie de services -->
-                    {% for service in filtres %}
+                    <!-- {% for service in filtres %}
                       <li><a class="dropdown-item" href="/agent">{{service}}</a></li>
                     {% endfor %}
                   </ul>
-                </div>
+                </div> -->
 
-                <div class="card-body">
-                  <h5 class="card-title">{{type}} <span>| Today</span></h5>
+                <div class="card-body" style="margin-top: 10px;">
+                  <!-- <h5 class="card-title">{{type}} <span>| Today</span></h5> -->
 
                   <table class="table table-borderless datatable">
                     <thead>
