--- a/support/templates/agent/index.html
+++ b/support/templates/agent/index.html
@@ -146,17 +146,18 @@
 
       <li class="nav-item">
         <a class="nav-link " href="/agent/pending">
-          <i class="bi bi-grid"></i>
+          <i class="bi bi-clock"></i>
           <span>Demandes en cours de traitement</span>
         </a>
       </li>
 
       <li class="nav-item">
         <a class="nav-link " href="/agent/solved">
-          <i class="bi bi-grid"></i>
+          <i class="bi bi-check-circle"></i>
           <span>Demandes traitées</span>
         </a>
       </li>
+    </ul>
 
   </aside><!-- End Sidebar-->
   {%endblock%}
