--- a/support/templates/chef_agence/demandes_resolues.html
+++ b/support/templates/chef_agence/demandes_resolues.html
@@ -37,7 +37,7 @@ Tableau de bord
                         <tr>
                             <td>{{d.date_formulation}} </td>
                             <td>{{d.service.libelle}} </td>
-                            <td>{{d.etat.libelle}} </td>
+                            <td>Traitée</td>
                             <td>
                                 <div class="text-end">
                                     <a href="/demande/{{d.id}}/consulter">
