Modifications apportees a la liste des demandes traitees et ajout de l'option Demandes envoyees par l'admin

--- a/support/templates/base.html
+++ b/support/templates/base.html
@@ -251,6 +251,11 @@
               <i class="bi bi-circle"></i><span>Demandes traitées</span>
             </a>
           </li>
+          <li>
+            <a href="/demande/envoyees_chef">
+              <i class="bi bi-circle"></i><span>Demandes envoyées</span>
+            </a>
+          </li>
         </ul>
       </li><!-- End Tables Nav -->
     </ul>
