--- a/support/templates/chef_agence/demandes_resolues.html
+++ b/support/templates/chef_agence/demandes_resolues.html
@@ -35,8 +35,8 @@ Tableau de bord
                     <tbody>
                         {%for d in demandes_resolues %}
                         <tr>
-                            <td>{{d.date_formulation}} </td>
-                            <td>{{d.service.libelle}} </td>
+                            <td>{{d.demande.date_formulation}} </td>
+                            <td>{{d.demande.service.libelle}} </td>
                             <td>Traitée</td>
                             <td>
                                 <div class="text-end">
